RESOLVED FIXED49397
video-pause-immediately.html sometimes fails
https://bugs.webkit.org/show_bug.cgi?id=49397
Summary video-pause-immediately.html sometimes fails
Eric Carlson
Reported 2010-11-11 11:56:36 PST
r71824 causes video-pause-immediately.html to fail occasionally on the Leopard Release bot.
Attachments
Proposed patch (2.29 KB, patch)
2010-11-11 12:15 PST, Eric Carlson
no flags
Updated patch (2.26 KB, patch)
2010-11-11 12:18 PST, Eric Carlson
eric: review+
Eric Carlson
Comment 1 2010-11-11 12:15:44 PST
Created attachment 73635 [details] Proposed patch
Eric Carlson
Comment 2 2010-11-11 12:18:27 PST
Created attachment 73636 [details] Updated patch Removed and "Oops" from the ChangeLog
Eric Seidel (no email)
Comment 3 2010-11-11 12:24:50 PST
Comment on attachment 73636 [details] Updated patch OK.
Eric Carlson
Comment 4 2010-11-11 12:32:39 PST
Note You need to log in before you can comment on or make changes to this bug.