2010-11-11  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Eric Seidel.

        video-pause-immediately.html sometimes fails
        https://bugs.webkit.org/show_bug.cgi?id=49397

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::playInternal): Don't bother calling invalidateCachedTime, it
        will be called from updatePlayState.
        (WebCore::HTMLMediaElement::pauseInternal): Don't bother calling refreshCachedTime, it
        will be called from updatePlayState.
        (WebCore::HTMLMediaElement::updatePlayState): Call refreshCachedTime after telling the media
        engine to pause so we cache the post-paused time.



Canonical link: https://commits.webkit.org/62318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71842 268f45cc-cd09-0410-ab3c-d52691b4dbfc